<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/demo_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo_mode"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/menu_button_01"
        android:text="@string/menu_button_01"
        android:gravity="center"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/menu_button_02"
        android:text="@string/menu_button_02"
        android:gravity="center"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/menu_button_03"
        android:text="@string/menu_button_03"
        android:gravity="center"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/mp_license" />

</LinearLayout>